<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navigation_container"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bank"
            android:title="@string/bankResponse" />

        <item
            android:id="@+id/nav_device"
            android:title="@string/deviceEntity" />

        <item
            android:id="@+id/nav_spannable"
            android:title="@string/spannable" />

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_photo"
            android:title="@string/my_photo" />

        <item
            android:id="@+id/nav_retrofit"
            android:title="@string/retrofit" />

        <item
            android:id="@+id/alarm_manager"
            android:title="@string/alarm_manager" />

        <item
            android:id="@+id/rx_fragment"
            android:title="@string/rxfragment" />

    </group>

    <group
        android:id="@+id/logout_container"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />


    </group>
</menu>